--- a/Frontend/src/app/components/navbar/navbar.component.html
+++ b/Frontend/src/app/components/navbar/navbar.component.html
@@ -5,5 +5,13 @@
         <a routerLink="/events" routerLinkActive="active">Events</a>
         <a routerLink="/configurations" routerLinkActive="active">Configurations</a>
         <a routerLink="/tickets" routerLinkActive="active">Tickets</a>
+        <a routerLink="/login" routerLinkActive="active">Login</a>
+        <a routerLink="/logout" routerLinkActive="active">Logout</a>    
     </div>
 </nav>
+<!-- <nav *ngIf="showNavbar">
+    <a routerLink="/events" routerLinkActive="active">Events</a>
+    <a routerLink="/configurations" routerLinkActive="active">Configurations</a>
+    <a routerLink="/tickets" routerLinkActive="active">Tickets</a>
+    <a routerLink="/login" routerLinkActive="active">Login</a>
+</nav> -->
