--- a/Frontend/src/app/components/home/home.component.html
+++ b/Frontend/src/app/components/home/home.component.html
@@ -1,8 +1,15 @@
-<div class="container">
+
+<body class="">
+
+<div class="container" 
+style="justify-content: center; align-items: center;margin-left: 800px;margin-top: 200px;background-color: rgb(45, 150, 182);"
+>
     <h1>Real Time Ticketing System</h1>
+    <h2>Welcome to The Event Ticketing System</h2>
     <div class="button-group">
         <button (click)="navigate('events')" class="btn">Events</button>
         <button (click)="navigate('configurations')" class="btn">Configurations</button>
         <button (click)="navigate('tickets')" class="btn">Tickets</button>
     </div>
 </div>
+</body> 
