--- a/Frontend/src/app/components/navbar/navbar.component.html
+++ b/Frontend/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,8 @@
-<nav class="navbar">
+
+<nav *ngIf="showNavbar" class="navbar">
     <div class="navbar-brand">Event Ticketing System</div>
     <div class="navbar-links">
-        <a routerLink="/home" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
+        <a routerLink="/home" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a> 
         <a routerLink="/events" routerLinkActive="active">Events</a>
         <a routerLink="/configurations" routerLinkActive="active">Configurations</a>
         <a routerLink="/tickets" routerLinkActive="active">Tickets</a>
@@ -9,9 +10,3 @@
         <a routerLink="/logout" routerLinkActive="active">Logout</a>    
     </div>
 </nav>
-<!-- <nav *ngIf="showNavbar">
-    <a routerLink="/events" routerLinkActive="active">Events</a>
-    <a routerLink="/configurations" routerLinkActive="active">Configurations</a>
-    <a routerLink="/tickets" routerLinkActive="active">Tickets</a>
-    <a routerLink="/login" routerLinkActive="active">Login</a>
-</nav> -->
